--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/styled-components": "^4.1.4",
+    "axios": "^0.18.0",
     "firebase": "^5.7.1",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
-    "react": "^16.7.0",
+    "query-string": "^6.2.0",
+    "rc-scroll-anim": "^2.5.6",
+    "react": "^16.7.0-alpha.0",
     "react-app-env": "^1.2.3",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.7.0-alpha.0",
+    "react-jsonschema-form": "^1.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-spring": "^7.2.4",
     "styled-components": "^4.1.3",
     "typescript": "^3.2.2"
   },
