--- a/production.env
+++ b/production.env
@@ -1,2 +1,3 @@
 API_KEY='AIzaSyBMIu_2ho7WJzhvYVZZgovT21nEoGcprNk'
 AUTH_DOMAIN='th-appjam-226305.firebaseapp.com'
+API_BASE_URL='https://soylatte.kr:3000'
